# Stoneytosh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pwa
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-kext.yml  main.yml
LegacyRed/: AMDCommon.hpp  ATOMBIOS.hpp  DYLDPatches.cpp  DYLDPatches.hpp  Firmware.hpp  Framebuffer.cpp  Framebuffer.hpp  GFXCon.cpp  GFXCon.hpp  HWLibs.cpp  HWLibs.hpp  Info.plist  LRed.cpp  LRed.hpp  Model.hpp  PluginStart.cpp  Support.cpp  Support.hpp  X4000.cpp  X4000.hpp  file.txt  kern_amd.hpp  kern_dyld_patches.cpp  kern_dyld_patches.hpp  kern_fw.hpp  kern_gfx7con.cpp  kern_gfx7con.hpp  kern_gfx8con.cpp  kern_gfx8con.hpp  kern_gfxcon.cpp  kern_gfxcon.hpp  kern_hwlibs.cpp  kern_hwlibs.hpp  kern_lred.cpp  kern_lred.hpp  kern_model.hpp  kern_patches.hpp  kern_start.cpp  kern_support.cpp  kern_support.hpp  (+7 more)
LegacyRed.xcodeproj/: project.pbxproj
LegacyRed/Firmware/: Drivers.xml  LegacyDrivers.xml  LegacyFramebuffers.xml
Scripts/: FwGen.sh  GenerateFirmware.py  WRedWrapGen.py
